[package]
name = "rnote_import"
version = "0.1.0"
edition = "2021"

[dependencies]
rnote-engine = { path = "../rnote/crates/rnote-engine", features=["cli"]}
rnote-compose = { path = "../rnote/crates/rnote-compose", features = ["clap-derive"]}
nalgebra = "0.33.2"
smol = "2.0.2"
anyhow = "1.0.93"
serde_json = "1.0.133"
serde = "1.0.215"
